implemented GetCommitByDescription
