# pkg/handler/commit.go
@@ -17,6 +17,7 @@ type CommitHandler interface {
 	GetCommitsAfter(http.ResponseWriter, *http.Request)
 	GetCommitByMessage(http.ResponseWriter, *http.Request)
 	CommitReleased(http.ResponseWriter, *http.Request)
+	GetCommitByDescription(http.ResponseWriter, *http.Request)
 }
 
 var _ CommitHandler = &commitHandler{}
@@ -194,4 +195,72 @@ func getCommitsByPageNumber(baseUrl string, page_number int, req *http.Request, 
 		errMessage = "Error unmarshalling JSON: " + err.Error()
 	}
 	return
+}
+
+func (h *commitHandler) GetCommitByDescription(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+
+	// Get request data from query params
+	request, errMessage := GetCommitByDescriptionRequest(r)
+	if errMessage != "" {
+		http.Error(w, errMessage, http.StatusBadRequest)
+		return
+	}
+
+	baseUrl := fmt.Sprintf("https://api.github.com/repos/%s/%s/commits?per_page=100&page=", request.Owner, request.Repository)
+	method := "GET"
+
+	req, err := http.NewRequest(method, baseUrl, nil)
+	if err != nil {
+		http.Error(w, "Error generating new request: "+err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	resp := []model.CommitData{}
+
+	for page_number := 1; ; page_number++ {
+		url := baseUrl + strconv.Itoa(page_number)
+		u, err := urlpkg.Parse(url)
+		if err != nil {
+			http.Error(w, "Error generating new URL: "+err.Error(), http.StatusInternalServerError)
+			return
+		}
+		req.URL = u
+
+		// Define a variable of type []Commit to store the data
+		var commits []model.CommitData
+
+		client := &http.Client{}
+		res, err := client.Do(req)
+		if err != nil {
+			http.Error(w, "Error making request to GitHub: "+err.Error(), http.StatusInternalServerError)
+			return
+		}
+		defer res.Body.Close()
+
+		body, err := io.ReadAll(res.Body)
+		if err != nil {
+			http.Error(w, "Error reading response: "+err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		// Unmarshal JSON data into commits variable
+		err = json.Unmarshal(body, &commits)
+		if err != nil {
+			http.Error(w, "Error unmarshalling JSON: "+err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		if len(commits) == 0 {
+			break
+		}
+
+		for _, c := range commits {
+			if strings.Contains(strings.ToLower(c.Commit.Message), strings.ToLower(request.Description)) {
+				resp = append(resp, c)
+			}
+		}
+	}
+
+	_ = json.NewEncoder(w).Encode(resp)
 }
